--- a/index.html
+++ b/index.html
@@ -42,6 +42,16 @@ cheat{display:none;}
 header,clock,i,like{-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;-o-user-select:none;user-select:none;}
 pixel{position:absolute;width:1px;height:1px;background:#000;}
 #fb-root { width: 0; height: 0; }
+.mtw {
+	position: fixed;
+    left: 12px;
+    top: 35px;
+    font-size: 12px;
+    font-weight: bold;
+    font-style: italic;
+}
+.mtw a {
+}
 </style>
 <script type="text/javascript">
 
@@ -76,6 +86,9 @@ fjs.parentNode.insertBefore(js, fjs);
 <like>
 <div class="fb-like"  data-href="http://wheresthepixel.com/" data-send="false" data-layout="button_count" data-width="150" data-show-faces="false" data-font="lucida grande"></div>
 </like>
+<div class="mtw">
+	Love pixels? Checkout <a href="https://milliontokenwebsite.com">Million Token Website</a> today!
+</a>
 <scores><clock></clock></scores>
 <share>
 <a href="#" id="twitter">tweet your high score</a>
